# knowledge_graph_project

./: .gitignore  pyproject.toml
Holidays_Events/: Holidays_events_References.md
causality/: adjacency_matrix_1.csv  adjacency_matrix_1.json  adjacency_matrix_2.csv  adjacency_matrix_2.json  adjacency_matrix_3.csv  adjacency_matrix_3.json  adjacency_matrix_4.csv  adjacency_matrix_4.json  adjacency_matrix_5.csv  adjacency_matrix_5.json  causal_graph.json  causal_graph_edges.csv  causal_graph_edges_nodes.csv  counterfactual_detailed_changes.csv  counterfactual_feature_importance.csv  counterfactual_sample_level.csv  counterfactual_worst_perturbations.csv  importance_comparison.csv  varlingam_edges.csv  varlingam_edges.json
diagrams/: .$Diagram_products.drawio.bkp  Diagram_products.drawio
models/: best_models_metadata.json  catboost_model.cbm  lightgbm_model.txt  model_comparison_summary.csv  randomforest_model.pkl  xgboost_model.json
notebooks/: 01_feature_engineering.ipynb  02_ml_modeling.ipynb  03_ml_modeling_movers.ipynb  04_causal_graph_feature_importance.ipynb  05_taxonomy_analysis.ipynb  06_trading_economics_datasets.ipynb  best_gnn_model.pt  check_data.py  data_analysis_13-11-2025.ipynb  data_analysis_17-11-2025.ipynb  data_analysis_18-11-2025.ipynb  data_analysis_20-11-2025.ipynb  data_quality_check.py  gnn_supply_chain_forecasting.ipynb  gnn_supply_chain_forecasting.py  inspect_graph_files.py  my_code_13-11-2025_03_tables_figuring_out.ipynb  node_edges_SOS005L04P.html  original_code.ipynb  plant_1903_specialization.html  reproduce_issue.py  test.ipynb  (+1 more)
(+95 files in other folders)
