[project]
name = "knowledge-graph-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "graphviz>=0.21",
    "jupyterlab>=4.4.10",
    "lightgbm>=4.6.0",
    "lingam>=1.11.0",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyvis>=0.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "xgboost>=3.1.2",
]
